force-app/main/default/objects/ObjectAuditTrail__c/ObjectAuditTrail__c.object-meta.xml
<CustomObject>
    <description>Generic object designed to keep a trail of significant changes at some important fields. FOr example, we use this to log all the rejected solutions to claims.</description>
    <label>Object Audit Trail</label>
    <nameField>
        <label>Object Audit Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>