force-app/main/default/objects/ObjectAuditTrail__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Claim SOlution Accepted</description>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>