force-app/main/default/objects/ObjectAuditTrail__c/fields/AuditTrailType__c.field-meta.xml
<CustomField>
    <fullName>AuditTrailType__c</fullName>
    <label>Audit Trail Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLAIM_SOLUTION</fullName>
                <label>CLAIM SOLUTION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>