force-app/main/default/objects/ObjectAuditTrail__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Claim Solutions Audit Trail</relationshipLabel>
    <relationshipName>Object_Audit_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>