force-app/main/default/objects/ObjectAuditTrail__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Notes or remarks concerning the trail log.</description>
    <label>Remarks</label>
    <length>200</length>
    <type>Text</type>
</CustomField>