force-app/main/default/objects/ObjectAuditTrail__c/fields/SettlementAmount__c.field-meta.xml
<CustomField>
    <fullName>SettlementAmount__c</fullName>
    <description>Claim Selection: Settlement Amount</description>
    <label>Settlement Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>