force-app/main/default/objects/ObjectAuditTrail__c/fields/SupplyInstallation__c.field-meta.xml
<CustomField>
    <fullName>SupplyInstallation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Claim Solution: Supply Installation and repair services</description>
    <label>Supply Installation</label>
    <type>Checkbox</type>
</CustomField>