force-app/main/default/objects/ObjectAuditTrail__c/fields/SupplyReplacement__c.field-meta.xml
<CustomField>
    <fullName>SupplyReplacement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Claim SOlution: Supply replacement</description>
    <label>Supply Replacement</label>
    <type>Checkbox</type>
</CustomField>